# build-system-playground

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  yogi.sln
yogi-core/: CMakeLists.txt  yogi-core-lib.vcxproj  yogi-core-lib.vcxproj.filters  yogi-core-static.vcxproj  yogi-core-static.vcxproj.filters  yogi-core-tests.vcxproj  yogi-core-tests.vcxproj.filters  yogi-core.vcxproj  yogi-core.vcxproj.filters
yogi-core/doc/: Doxyfile
yogi-core/include/: yogi_core.h
yogi-core/src/: config.h  constants.cc  constants.h  errors.cc  errors.h  export.map  yogi_core.cc
yogi-core/src/api/: constants.cc  constants.h  enums.h  error.cc  error.h  errors.cc  errors.h  exposed_object.h  object.cc  object.h  objects.h
yogi-core/src/licenses/: 3rd_party_licenses.cc  licenses.h  yogi_license.cc
yogi-core/src/network/: message.cc  message.h  messages.cc  messages.h  msg_transport.cc  msg_transport.h  msg_types.cc  msg_types.h  socket.cc  socket.h  tcp_transport.cc  tcp_transport.h  transport.cc  transport.h
yogi-core/src/objects/: branch.cc  branch.h  configuration.cc  configuration.h  context.cc  context.h  logger.cc  logger.h  signal_set.cc  signal_set.h  timer.cc  timer.h
yogi-core/src/objects/detail/: adv_receiver.cc  adv_receiver.h  adv_sender.cc  adv_sender.h  command_line_parser.cc  command_line_parser.h  (+2 more)
yogi-core/src/utils/: console.cc  console.h  crypto.cc  crypto.h  glob.cc  glob.h  ip.cc  ip.h  payload.cc  payload.h  ringbuffer.cc  ringbuffer.h  serialize.h  socket.cc  socket.h  system.cc  system.h  time.cc  time.h  timestamp.cc  timestamp.h  types.h
yogi-core/src/yogi_core/: branches.cc  configurations.cc  contexts.cc  helpers.cc  helpers.h  logging.cc  macros.h  miscellaneous.cc  objects.cc  signals.cc  time.cc  timers.cc
yogi-core/test/: branch_test.cc  common.cc  common.h  connection_manager_test.cc  constants_test.cc  context_test.cc  errors_test.cc  glob_test.cc  licenses_test.cc  logger_test.cc  main.cc  object_test.cc  serialize_test.cc  signals_test.cc  stdafx.h  time_test.cc  timer_test.cc  version_test.cc  yogi_core_test.cc
yogi-core/test/api/: constants_test.cc  errors_test.cc  object_test.cc
yogi-core/test/licenses/: licenses_test.cc
yogi-core/test/network/: message_test.cc  messages_test.cc  msg_transport_test.cc  serialize_test.cc  tcp_transport_test.cc  transport_test.cc
yogi-core/test/objects/: branch_test.cc  broadcast_manager_test.cc  command_line_parser_test.cc  configuration_test.cc  connection_manager_test.cc  context_test.cc  format_test.cc  logger_test.cc  signal_set_test.cc  signals_test.cc  timer_test.cc
yogi-core/test/utils/: glob_test.cc  payload_test.cc  ringbuffer_test.cc  serialize_test.cc  system_test.cc
yogi-core/yogi-core/: CMakeLists.txt  stdafx.h  yogi-core.vcxproj  yogi-core.vcxproj.filters  yogi_core.cc
yogi-core/yogi-core-lib/: CMakeLists.txt  config.h  stdafx.h  yogi-core-lib.vcxproj  yogi-core-lib.vcxproj.filters
yogi-core/yogi-core-lib/src/: config.h  errors.h  stdafx.h
yogi-core/yogi-core-tests/: CMakeLists.txt  yogi-core-tests.cc  yogi-core-tests.vcxproj  yogi-core-tests.vcxproj.filters
yogi-core/yogi-core-tests/src/: stdafx.h  yogi-core-tests.cc
yogi-core/yogi-core/src/: stdafx.h  yogi_core.cc
yogi-cpp/: CMakeLists.txt  yogi-cpp-tests.vcxproj  yogi-cpp-tests.vcxproj.filters  yogi-cpp.vcxproj  yogi-cpp.vcxproj.filters
yogi-cpp/doc/: Doxyfile
yogi-cpp/include/: yogi.h
yogi-cpp/include/yogi/: branch.h  configuration.h  constants.h  context.h  duration.h  errors.h  io.h  json.h  json_view.h  library.h  licenses.h  logging.h  msg_pack.h  msgpack.h  msgpack_view.h  object.h  operation_id.h  payload.h  payload_view.h  signals.h  stream_io.h  string_view.h  time.h  timer.h  timestamp.h  uuid.h  version.h
yogi-cpp/test/: branch_compile_test.cc  branch_test.cc  common.cc  common.h  constants_test.cc  context_test.cc  errors_compile_test.cc  errors_test.cc  io_test.cc  library_test.cc  licenses_test.cc  logging_test.cc  object_test.cc  stream_io_test.cc  time_test.cc  uuid_test.cc  version_compile_test.cc  version_test.cc  yogi_cpp_test.cc
yogi-cpp/test/compile_tests/: configuration_compile_test.cc  constants_compile_test.cc  context_compile_test.cc  duration_compile_test.cc  io_compile_test.cc  json_compile_test.cc  licenses_compile_test.cc  logging_compile_test.cc  msg_pack_compile_test.cc  object_compile_test.cc  payload_compile_test.cc  signals_compile_test.cc  stream_io_compile_test.cc  time_compile_test.cc  timer_compile_test.cc  timestamp_compile_test.cc  uuid_compile_test.cc
yogi-cpp/test/internal_tests/: conversion_test.cc  duration_conversion_test.cc  json_test.cc  json_view_test.cc  string_conversion_test.cc  string_view_test.cc
yogi-cpp/test/public_api_tests/: branch_test.cc  configuration_test.cc  constants_test.cc  context_test.cc  duration_test.cc  errors_test.cc  io_test.cc  json_test.cc  json_view_test.cc  licenses_test.cc  logging_test.cc  msgpack_view_test.cc  object_test.cc  operation_id_test.cc  payload_test.cc  payload_view_test.cc  signals_test.cc  stream_io_test.cc  string_view_test.cc  time_test.cc  timer_test.cc  timestamp_test.cc  uuid_test.cc  version_test.cc  yogi_header_test.cc
yogi-cpp/yogi-cpp/: stdafx.cpp  yogi-cpp.vcxproj  yogi-cpp.vcxproj.filters
yogi-cpp/yogi-cpp-tests/: stdafx.cpp  yogi-cpp-tests.cpp  yogi-cpp-tests.vcxproj  yogi-cpp-tests.vcxproj.filters
yogi-cpp/yogi-cpp-tests/src/: stdafx.h  yogi-cpp-tests.cc
yogi-hub/: CMakeLists.txt  yogi-hub-lib.vcxproj  yogi-hub-lib.vcxproj.filters  yogi-hub-static.vcxproj  yogi-hub-static.vcxproj.filters  yogi-hub-tests.vcxproj  yogi-hub-tests.vcxproj.filters  yogi-hub.vcxproj  yogi-hub.vcxproj.filters
yogi-hub/src/: main.cc
yogi-hub/test/: yogi_hub_test.cc
yogi-hub/yogi-hub/: stdafx.cpp  yogi-hub.cpp  yogi-hub.vcxproj  yogi-hub.vcxproj.filters
yogi-hub/yogi-hub-lib/: stdafx.cpp  yogi-hub-lib.vcxproj
yogi-hub/yogi-hub-tests/: stdafx.cpp  yogi-hub-tests.cpp  yogi-hub-tests.vcxproj  yogi-hub-tests.vcxproj.filters
yogi-hub/yogi-hub-tests/src/: yogi-hub-tests.cc
yogi-hub/yogi-hub/src/: yogi-hub.cpp
(+164 files in other folders)
